--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="interface">
             <section class="logo">
-                <a href="#">SINFCOooooR</a>
+                <a href="#">SINFCOR</a>
             </section> <!--fim logo-->
 
             <section class="menu">
